<resources>
    <string name="app_name">FuelPass</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="nic">NIC</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="no_account">No Account?</string>
    <string name="renter_password">Re-enter password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="full_name">Full Name</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_login">Back To Login</string>
    <string name="vehicle_owner">Vehicle Owner</string>
    <string name="station_owner">Station Owner</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map">Map</string>
    <string name="stations">Stations</string>
    <string name="settings">Settings</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Log Out</string>
    <string name="old_password">old-password</string>
    <string name="new_password">new-password</string>
    <string name="home">Home</string>
    <string name="station_name">Station Name</string>
    <string name="station_location_city">Station Location City</string>
    <string name="title_activity_add_tank">AddTank</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="add">Add</string>
    <string name="create_station">Create Station</string>
    <string name="add_tank">Add Tank</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="change">Change</string>
    <string name="status">Status</string>
    <string name="create_tank">Create Tank</string>
    <string name="back">Back</string>
    <string name="join">Join</string>
    <string name="count">Count</string>
    <string name="time">Time</string>
</resources>