<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card3"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="25dp"
    android:clickable="true"
    card_view:cardBackgroundColor="#E8DEEF"
    card_view:cardCornerRadius="8dp"
    card_view:contentPadding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fuelTypeC"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="73dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="117dp"
            android:text="@string/fuel_type"
            android:textColor="#000000"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/statusC" />


        <TextView
            android:id="@+id/statusC"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/status"
            android:textColor="#000000"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.384"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/countC"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="73dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="117dp"
            android:text="@string/count"
            android:textColor="#000000"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/fuelTypeC" />

        <Button
            android:id="@+id/changeC"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/round_bg2"
            android:contentDescription="@string/change"
            android:elevation="2dp"
            android:fontFamily="@font/poppins_medium"
            android:shadowColor="#A8A8A8"
            android:shadowDx="3"
            android:shadowDy="2"
            android:shadowRadius="8"
            android:text="@string/join"
            android:textColor="#FFFFFF"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/statusC"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <Button
            android:id="@+id/changeC2"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_marginStart="259dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="1dp"
            android:background="@drawable/round_bg"
            android:contentDescription="@string/change"
            android:elevation="2dp"
            android:fontFamily="@font/poppins_medium"
            android:shadowColor="#A8A8A8"
            android:shadowDx="3"
            android:shadowDy="2"
            android:shadowRadius="8"
            android:text="@string/join"
            android:textColor="#FFFFFF"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.473"
            card_view:layout_constraintStart_toStartOf="parent"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>