<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterOwner">

    <FrameLayout
        android:id="@+id/frame3"
        android:layout_width="411dp"
        android:layout_height="263dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/animation1" />

    </FrameLayout>


    <EditText
        android:id="@+id/RegNameO"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:autofillHints="Name"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_person"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/full_name"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="17dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="#0B0B0B"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame3"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/RegEmailO"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="55dp"
        android:autofillHints="Email"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_email"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingStart="17dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="#040404"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegNameO"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/RegNICO"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:autofillHints="NIC"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_person"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/nic"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="17dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="#040303"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegEmailO"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/RegPassO"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="56dp"
        android:autofillHints="password"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_lock"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="17dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="#050505"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegNICO"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/RegPassChkO"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="55dp"
        android:autofillHints="password re-enter"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_lock"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/renter_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="17dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="#191818"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegPassO"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/RegBtn0"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/round_bg2"
        android:elevation="2dp"
        android:fontFamily="@font/poppins_medium"
        android:shadowColor="#A8A8A8"
        android:shadowDx="3"
        android:shadowDy="2"
        android:shadowRadius="8"
        android:text="@string/create_account"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegPassChkO" />

    <TextView
        android:id="@+id/logURLO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/already_have_an_account"
        android:textColor="#090909"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegBtn0" />


</androidx.constraintlayout.widget.ConstraintLayout>