<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordReset">


    <FrameLayout
        android:id="@+id/frame4"
        android:layout_width="411dp"
        android:layout_height="263dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/animation1" />

    </FrameLayout>


    <EditText
        android:id="@+id/OldPass"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="64dp"
        android:autofillHints="old-password"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_lock"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="17dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="#090909"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame4"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/NewPass"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="56dp"
        android:autofillHints="new-password"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_lock"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="17dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="#090909"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OldPass"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/ResetBtn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/round_bg2"
        android:elevation="2dp"
        android:fontFamily="@font/poppins_medium"
        android:shadowColor="#A8A8A8"
        android:shadowDx="3"
        android:shadowDy="2"
        android:shadowRadius="8"
        android:text="@string/reset_password"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NewPass" />

    <TextView
        android:id="@+id/LoginURLR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/back_to_login"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ResetBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>