<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


        <FrameLayout
            android:id="@+id/frame1"
            android:layout_width="411dp"
            android:layout_height="263dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animationView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/animation1" />

        </FrameLayout>


        <EditText
            android:id="@+id/LoginEmail"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="52dp"
            android:autofillHints="NIC"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_email"
            android:ems="10"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingStart="17dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frame1"
            tools:ignore="RtlSymmetry" />


        <EditText
            android:id="@+id/LoginPass"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:autofillHints="password"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_lock"
            android:ems="10"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="17dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LoginEmail"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/LoginBtn"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="88dp"
            android:background="@drawable/round_bg"
            android:elevation="2dp"
            android:fontFamily="@font/poppins_medium"
            android:shadowColor="#A8A8A8"
            android:shadowDx="3"
            android:shadowDy="2"
            android:shadowRadius="8"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LoginPass" />

        <TextView
            android:id="@+id/RegURL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:text="@string/no_account"
            android:textColor="#0E0E0E"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LoginBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>